Evelyn/jax optimise (#70)
Change which methods of optimisation are available and add graphing
Co-authored-by: Jake Moss <jake@outerloop.io>

--- a/examples/batching_example.ipynb
+++ b/examples/batching_example.ipynb
@@ -66,7 +66,7 @@
       "source": [
         "n_obs = df['chid'].unique().shape[0]\n",
         "n_vars = 6\n",
-        "n_draws = 5000\n",
+        "n_draws = 1000\n",
         "\n",
         "size_in_ram = (n_obs * n_vars * n_draws * 8) / (1024 ** 3)  # in GB\n",
         "\n",
@@ -93,6 +93,15 @@
       "outputs": [],
       "source": [
         "model = MixedLogit()\n",
+        "\n",
+        "config = ConfigData(\n",
+        "    panels=df['id'],\n",
+        "    n_draws=1000,\n",
+        "    skip_std_errs=True,  # skip standard errors to speed up the example\n",
+        "    batch_size=None,\n",
+        "    optim_method=\"L-BFGS-scipy\",\n",
+        "    maxiter=100,\n",
+        ")\n",
         "\n",
         "res = model.fit(\n",
         "    X=df[varnames],\n",
