--- a/examples/mixed_logit_comparison_example.ipynb
+++ b/examples/mixed_logit_comparison_example.ipynb
@@ -8,11 +8,11 @@
     "# Summary of time taken and brier scores for jaxlogit, xlogit, and biogeme\n",
     "Where the estimation is using draws = 600 (suboptimal but highest without running out of memory in biogeme), and training and test data is separated.\n",
     "\n",
-    "| | jaxlogit | xlogit | biogeme |\n",
-    "|---|---|---|---|\n",
-    "|Making Model | 37.7s | 16.9s | 4:15 |\n",
-    "|Estimating | 1.6s | 0.0s | 15.4s |\n",
-    "|Brier Score | 0.6345 | 0.6345 | 0.6345 |"
+    "| | jaxlogit-scipy | jaxlogit-jax | xlogit | biogeme |\n",
+    "|---|---|---|---|---|\n",
+    "|Making Model | 33.1s | 22.2s | 18.5s | 4:30 |\n",
+    "|Estimating | 1.6s | 0.2s | 0.0s | 14.3s |\n",
+    "|Brier Score | 0.624247 | 0.624247 | 0.624570 | 0.624163 |"
    ]
   },
   {
@@ -110,6 +110,7 @@
     "df_test = wide_to_long(df_wide_test, \"chid\", [1,2,3,4], \"alt\", varying=varnames, panels=True)\n",
     "df_test = df_test.sort_values(['chid', 'alt'])\n",
     "\n",
+    "df_wide_train = df_wide_train.sort_values('chid')\n",
     "database_train = db.Database('electricity', df_wide_train)\n",
     "database_train.panel('id')\n",
     "database_test = db.Database('electricity', df_wide_test)"
@@ -157,13 +158,6 @@
     "model_jax = MixedLogit()\n",
     "model_x = xlogit.MixedLogit()\n",
     "\n",
-    "config = ConfigData(\n",
-    "    panels=panels_train,\n",
-    "    n_draws=n_draws,\n",
-    "    skip_std_errs=True,  # skip standard errors to speed up the example\n",
-    "    batch_size=None,\n",
-    "    optim_method=\"L-BFGS-B\",\n",
-    ")\n",
     "init_coeff = None"
    ]
   },
@@ -235,10 +229,46 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52742f8e",
+   "id": "22c1ceff",
    "metadata": {},
    "outputs": [],
    "source": [
+    "model_jax_scipy = MixedLogit()\n",
+    "config = ConfigData(\n",
+    "    panels=panels_train,\n",
+    "    n_draws=n_draws,\n",
+    "    skip_std_errs=True,  # skip standard errors to speed up the example\n",
+    "    batch_size=None,\n",
+    "    optim_method=\"L-BFGS-scipy\",\n",
+    ")\n",
+    "model_jax_scipy.fit(\n",
+    "    X=X_train,\n",
+    "    y=y_train,\n",
+    "    varnames=varnames,\n",
+    "    ids=ids_train,\n",
+    "    alts=alts_train,\n",
+    "    randvars=randvars,\n",
+    "    config=config\n",
+    ")\n",
+    "display(model_jax_scipy.summary())\n",
+    "init_coeff_scipy = model_jax_scipy.coeff_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fcdec596",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_jax = MixedLogit()\n",
+    "config = ConfigData(\n",
+    "    panels=panels_train,\n",
+    "    n_draws=n_draws,\n",
+    "    skip_std_errs=True,  # skip standard errors to speed up the example\n",
+    "    batch_size=None,\n",
+    "    optim_method=\"L-BFGS-jax\",\n",
+    ")\n",
     "model_jax.fit(\n",
     "    X=X_train,\n",
     "    y=y_train,\n",
@@ -249,7 +279,7 @@
     "    config=config\n",
     ")\n",
     "display(model_jax.summary())\n",
-    "init_coeff_j = model_jax.coeff_"
+    "init_coeff_jax = model_jax.coeff_"
    ]
   },
   {
@@ -325,17 +355,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"{:>13} {:>13} {:>13} {:>13}\".format(\"Estimate\", \"Jaxlogit\", \"xlogit\", \"Biogeme\"))\n",
-    "print(\"-\" * 58)\n",
-    "fmt = \"{:13} {:13.7f} {:13.7f} {:13.7f}\"\n",
+    "print(\"{:>9} {:>20} {:>15} {:>13} {:>13}\".format(\"Estimate\", \"Jaxlogit-scipy\", \"Jaxlogit-jax\", \"Xlogit\", \"Biogeme\"))\n",
+    "print(\"-\" * 76)\n",
+    "fmt = \"{:9} {:18.7f} {:16.7f} {:15.7f} {:13.7f}\"\n",
+    "biogeme_values = results.get_beta_values()\n",
     "coeff_names = {'pf': 'pf_mean', 'sd.pf': 'pf_sd', 'cl': 'cl_mean', 'sd.cl': 'cl_sd', 'loc': 'loc_mean', 'sd.loc': 'loc_sd', 'wk': 'wk_mean', 'sd.wk': 'wk_sd', 'tod': 'tod_mean', 'sd.tod': 'tod_sd', 'seas': 'seas_mean', 'sd.seas': 'seas_sd'}\n",
     "for i in range(len(model_jax.coeff_)):\n",
     "    name = model_jax.coeff_names[i]\n",
     "    print(fmt.format(name[:13], \n",
+    "                     model_jax_scipy.coeff_[i], \n",
     "                     model_jax.coeff_[i], \n",
-    "                     model_x.coeff_[i], \n",
-    "                     results.get_beta_values()[coeff_names[name]]))\n",
-    "print(\"-\" * 58)"
+    "                     model_x.coeff_[i],\n",
+    "                     biogeme_values[coeff_names[name]]))\n",
+    "print(\"-\" * 76)"
    ]
   },
   {
@@ -354,15 +386,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = model_jax \n",
+    "model = model_jax_scipy \n",
     "config = ConfigData(\n",
     "    panels=panels_test,\n",
     "    n_draws=n_draws,\n",
     "    skip_std_errs=True,  # skip standard errors to speed up the example\n",
     "    batch_size=None,\n",
-    "    optim_method=\"L-BFGS-B\",\n",
+    "    optim_method=\"L-BFGS-scipy\",\n",
     ")\n",
-    "config.init_coeff = init_coeff_j"
+    "config.init_coeff = init_coeff_scipy\n",
+    "prob_j_scipy = model.predict(X_test, varnames, alts_test, ids_test, randvars, config)"
    ]
   },
   {
@@ -372,7 +405,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prob_jj = model.predict(X_test, varnames, alts_test, ids_test, randvars, config)"
+    "model = model_jax\n",
+    "config = ConfigData(\n",
+    "    panels=panels_test,\n",
+    "    n_draws=n_draws,\n",
+    "    skip_std_errs=True,  # skip standard errors to speed up the example\n",
+    "    batch_size=None,\n",
+    "    optim_method=\"L-BFGS-jax\",\n",
+    ")\n",
+    "config.init_coeff = init_coeff_jax\n",
+    "prob_j_jax = model.predict(X_test, varnames, alts_test, ids_test, randvars, config)"
    ]
   },
   {
@@ -399,18 +441,6 @@
    "metadata": {},
    "source": [
     "Biogeme:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c56cca0f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "database_train = db.Database('electricity', df_wide_train)\n",
-    "database_train.panel('id')\n",
-    "database_test = db.Database('electricity', df_wide_test)"
    ]
   },
   {
@@ -451,10 +481,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"{:>9} {:>9} {:>9}\".format(\"Jaxlogit\", \"xlogit\", \"Biogeme\"))\n",
+    "print(\"{:>9} {:>9} {:>9} {:>9}\".format(\"Jaxlogit-scipy\", \"Jaxlogit-jax\", \"xlogit\", \"Biogeme\"))\n",
     "print(\"-\" * 31)\n",
-    "fmt = \"{:9f} {:9f} {:9f}\"\n",
-    "print(fmt.format(sklearn.metrics.brier_score_loss(np.reshape(y_test, (prob_jj.shape[0], -1)), prob_jj),\n",
+    "fmt = \"{:9f} {:9f} {:9f} {:9f}\"\n",
+    "print(fmt.format(sklearn.metrics.brier_score_loss(np.reshape(y_test, (prob_j_scipy.shape[0], -1)), prob_j_scipy),\n",
+    "                 sklearn.metrics.brier_score_loss(np.reshape(y_test, (prob_j_jax.shape[0], -1)), prob_j_jax),\n",
     "                 sklearn.metrics.brier_score_loss(np.reshape(y_test, (prob_xx.shape[0], -1)), prob_xx),\n",
     "                 sklearn.metrics.brier_score_loss(df_wide_test['choice'], probs)))\n",
     "print(\"-\" * 31)"
