--- a/examples/mixed_logit_correlated_example.ipynb
+++ b/examples/mixed_logit_correlated_example.ipynb
@@ -27,8 +27,7 @@
         "import numpy as np\n",
         "import jax\n",
         "\n",
-        "from jaxlogit.mixed_logit import MixedLogit, ConfigData\n",
-        "\n"
+        "from jaxlogit.mixed_logit import MixedLogit, ConfigData"
       ]
     },
     {
@@ -210,6 +209,7 @@
         "    n_draws=1500, \n",
         "    avail=(df['AV']),\n",
         "    panels=(df[\"ID\"]),\n",
+        "    optim_method=\"L-BFGS-scipy\",\n",
         ")\n",
         "\n",
         "res = model.fit(\n",
@@ -295,10 +295,10 @@
       "source": [
         "varnames=['ASC_CAR', 'ASC_TRAIN', 'ASC_SM', 'CO', 'TT']\n",
         "\n",
-        "randvars={'ASC_CAR': 'n', 'ASC_TRAIN': 'n', 'ASC_SM': 'n'}\n",
+        "randvars={'ASC_CAR': 'n_trunc', 'ASC_TRAIN': 'n', 'ASC_SM': 'n'}\n",
         "set_vars = {\n",
         "    'ASC_SM': 0.0, 'sd.ASC_TRAIN': 1.0, 'sd.ASC_CAR': 0.0,\n",
-        "    'chol.ASC_CAR.ASC_TRAIN': 0.0, 'chol.ASC_CAR.ASC_SM': 0.0\n",
+        "    'chol.ASC_TRAIN.ASC_SM': 0.00\n",
         "}  # Identification of error components, see J. Walker's PhD thesis (MIT 2001)\n",
         "\n",
         "config = ConfigData(\n",
@@ -306,6 +306,7 @@
         "    panels=df[\"ID\"],\n",
         "    set_vars=set_vars,\n",
         "    include_correlations=True,  # Enable correlation between random parameters\n",
+        "    maxiter=20,\n",
         ")\n",
         "\n",
         "\n",
@@ -331,7 +332,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "venv (3.10.12)",
+      "display_name": "venv",
       "language": "python",
       "name": "python3"
     },
@@ -345,7 +346,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.12"
+      "version": "3.12.3"
     }
   },
   "nbformat": 4,
