remove personal trick to make it run on my computer

--- a/examples/mixed_logit_comparison_example.ipynb
+++ b/examples/mixed_logit_comparison_example.ipynb
@@ -28,7 +28,19 @@
    "execution_count": null,
    "id": "39a05d62",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'jaxlogit'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 8\u001b[39m\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mxlogit\u001b[39;00m\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msklearn\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mjaxlogit\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mmixed_logit\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m MixedLogit, ConfigData\n\u001b[32m      9\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mjaxlogit\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mutils\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m wide_to_long\n\u001b[32m     11\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mbiogeme\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mbiogeme_logging\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mblog\u001b[39;00m\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'jaxlogit'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -37,8 +49,13 @@
     "import xlogit\n",
     "import sklearn\n",
     "\n",
+    "import os\n",
+    "os.chdir(\"/home/evelyn/projects_shared/jaxlogit\")\n",
+    "\n",
     "from jaxlogit.mixed_logit import MixedLogit, ConfigData\n",
     "from jaxlogit.utils import wide_to_long\n",
+    "\n",
+    "os.chdir(\"/home/evelyn/projects_shared/jaxlogit/examples\")\n",
     "\n",
     "import biogeme.biogeme_logging as blog\n",
     "import biogeme.biogeme as bio\n",
