--- a/examples/graphs/comparison_graphs_memory.ipynb
+++ b/examples/graphs/comparison_graphs_memory.ipynb
@@ -466,9 +466,15 @@
     "              \"jaxlogit_scipy_b_batched\": \"Jaxlogit using BFGS-scipy and batching\"\n",
     "              }\n",
     "include = [\"jaxlogit_scipy\", \"jaxlogit_jax\", \"xlogit\", \"biogeme\", \"jaxlogit_scipy_batched\"]\n",
+    "colours = {'jaxlogit_scipy': 'tab:blue', 'jaxlogit_scipy_batched': 'tab:blue', 'jaxlogit_jax': 'tab:orange', 'xlogit': 'tab:red', 'biogeme': 'tab:purple'}\n",
     "\n",
     "for index, row in rdf.iterrows():\n",
-    "    plt.plot(row[\"memory\"], label=names_dict[row[\"package\"]])\n",
+    "    if row[\"package\"] not in include:\n",
+    "        continue\n",
+    "    if row[\"package\"] == 'jaxlogit_scipy_batched':\n",
+    "        plt.plot(row[\"memory\"], label=names_dict[row[\"package\"]], color=colours[row[\"package\"]], linestyle=':')\n",
+    "        continue\n",
+    "    plt.plot(row[\"memory\"], label=names_dict[row[\"package\"]], color=colours[row[\"package\"]])\n",
     "plt.xlim(left=0)\n",
     "plt.xlabel(\"Time (samples)\")\n",
     "plt.ylabel(\"Memory (MB)\")\n",
@@ -488,7 +494,10 @@
     "for index, row in rdf.iterrows():\n",
     "    if row[\"package\"] not in include:\n",
     "        continue\n",
-    "    plt.plot(row[\"memory\"], label=names_dict[row[\"package\"]])\n",
+    "    if row[\"package\"] == 'jaxlogit_scipy_batched':\n",
+    "        plt.plot(row[\"memory\"], label=names_dict[row[\"package\"]], color=colours[row[\"package\"]], linestyle=':')\n",
+    "        continue\n",
+    "    plt.plot(row[\"memory\"], label=names_dict[row[\"package\"]], color=colours[row[\"package\"]])\n",
     "plt.xlim(left=0, right=30)\n",
     "plt.ylim(top=15000)\n",
     "plt.xlabel(\"Time (samples)\")\n",
