--- a/examples/graphs/comparison_graphs_timing.ipynb
+++ b/examples/graphs/comparison_graphs_timing.ipynb
@@ -542,7 +542,8 @@
     "matplotlib.rcParams.update({'font.size': 14,\n",
     "                            'axes.spines.right': False,\n",
     "                            'axes.spines.top': False})\n",
-    "libs = ['jaxlogit_scipy', 'jaxlogit_jax', 'jaxlogit_scipy_batched', 'xlogit', 'biogeme']"
+    "libs = ['jaxlogit_scipy', 'jaxlogit_jax', 'jaxlogit_scipy_batched', 'xlogit', 'biogeme']\n",
+    "# libs = ['jaxlogit_scipy', 'jaxlogit_jax', 'jaxlogit_scipy_batched', 'xlogit'] # no Biogeme in artificial"
    ]
   },
   {
@@ -586,10 +587,15 @@
     "              \"jaxlogit_scipy_b_batched\": \"Jaxlogit using BFGS-scipy and batching\"\n",
     "              }\n",
     "\n",
+    "colours = {'jaxlogit_scipy': 'tab:blue', 'jaxlogit_scipy_batched': 'tab:blue', 'jaxlogit_jax': 'tab:orange', 'xlogit': 'tab:red', 'biogeme': 'tab:purple'}\n",
+    "\n",
     "def plot(df, name):\n",
     "    for lib in libs:\n",
     "        rdf = df.loc[df[\"package\"] == lib]\n",
-    "        plt.plot(rdf[\"draws\"], rdf[\"time\"], label=names_dict[lib])\n",
+    "        if lib == 'jaxlogit_scipy_batched':\n",
+    "            plt.plot(rdf[\"draws\"], rdf[\"time\"], label=names_dict[lib], color=colours[lib], linestyle=\":\")\n",
+    "            continue\n",
+    "        plt.plot(rdf[\"draws\"], rdf[\"time\"], label=names_dict[lib], color=colours[lib])\n",
     "    plt.legend(bbox_to_anchor=(1, 1))\n",
     "    plt.xlabel(\"Random draws\")\n",
     "    plt.ylabel(\"Time (Seconds)\")\n",
