Add instructions for graphing notebooks

--- a/examples/graphs/comparison_graphs_memory.ipynb
+++ b/examples/graphs/comparison_graphs_memory.ipynb
@@ -17,6 +17,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "97bd267b",
+   "metadata": {},
+   "source": [
+    "To generate the data and graphs: just hit \"Run All\".\n",
+    "Currently set up to retrieve data, but this can be changed in the first cell under the 'Graphs' header to save data, retrieve data, and/or update data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "31b2ad5e",
    "metadata": {},
    "source": [
@@ -51,6 +60,14 @@
     "\n",
     "#  64bit precision\n",
     "jax.config.update(\"jax_enable_x64\", True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9105213f",
+   "metadata": {},
+   "source": [
+    "Set which dataset to use"
    ]
   },
   {
@@ -410,6 +427,7 @@
    "id": "68abd6e0",
    "metadata": {},
    "source": [
+    "# Graphs\n",
     "Note: watch whether dumping, appending, or retrieving data and which datafile is being used"
    ]
   },
