--- a/examples/graphs/comparison_graphs_timing.ipynb
+++ b/examples/graphs/comparison_graphs_timing.ipynb
@@ -17,6 +17,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5b7792f2",
+   "metadata": {},
+   "source": [
+    "To generate the data and graphs: just hit \"Run All\".\n",
+    "Currently set up to retrieve data, but this can be changed in the first cell under the 'Graphs' header to save data, retrieve data, and/or update data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "31b2ad5e",
    "metadata": {},
    "source": [
